--- a/faleconosco.html
+++ b/faleconosco.html
@@ -36,6 +36,10 @@
       <section class="banner">
         <p>Explore, Descubra, Divirta-se, Aventure-se! Junte-se a Nós!</p>
       </section>
+      <div class="frase"><h2> Vamos desbravar juntos o caminho e encontrar tesouros de experiência que estão à nossa espera!!</h2>
+    </div>
+      <div class="maps">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d7834.779708721302!2d-37.059276324450494!3d-10.93389507444998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sRua%20J%C3%A3o%20Bosco%20de%20Menezes%20384%2C%20Loja%2032-%20Aracaju%2FSE!5e0!3m2!1spt-BR!2sbr!4v1696025386322!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
       <div class="cont">
         <div class="flex">
           <div class="hablar">
@@ -64,14 +68,15 @@
         </div>
       </div>
 
-      <footer>
-        <p>&copy; 2023 RV Turismo</p>
-        <p>
-          <a href="#">Política de Privacidade</a>
-          <a href="#">Termos de Uso</a>
-          <a href="faleconosco.html">Contato</a>
-        </p>
-      </footer>
+
     </main>
+    <footer>
+      <p>&copy; 2023 RV Turismo</p>
+      <p>
+        <a href="#">Política de Privacidade</a>
+        <a href="#">Termos de Uso</a>
+        <a href="faleconosco.html">Contato</a>
+      </p>
+    </footer>
   </body>
 </html>
