--- a/sobre.html
+++ b/sobre.html
@@ -38,6 +38,7 @@
           <div class="txt-sobre">
             <div class="txt">
               <h2>Sobre Nós</h2>
+              <img src="img/Modelo_4.jpeg" alt="">
               <p>
                 A RV Turismo é uma empresa especializada na organização de
                 viagens em Sergipe, uma terra de beleza única e inigualável.
